# cmake-professional

./: CMakeCPack.cmake  CMakeLists.txt  CTestConfig.cmake  INSTALL.md  README.md  howto-usage-gitpush.md  log  menu.yml  sup-debug-build.sh  sup-release-build.sh
check_buildtype_base/: CMakeLists.txt
check_buildtype_base/source/: CMakeLists.txt  hello.cpp
check_diffmethods/: CMakeLists.txt
check_diffmethods/source/: CMakeLists.txt  archiver.cmake  generateFiles.cpp
check_diytarget/source/: CMakeLists.txt  api.cpp  api.h
check_exporth/: CMakeLists.txt  debugBuild.sh  log
check_exporth/source/: CMakeLists.txt  master.cpp  myTools.cpp  myTools.h
check_fileprocessing/: CMakeLists.txt
check_fileprocessing/source/: CMakeLists.txt  input.txt.in  quoting.txt.in  various.txt.in  whoami.sh.in
check_function/: CMakeLists.txt
check_function/src/: CMakeLists.txt
check_interface/: CMakeLists.txt  log
check_interface/source/: CMakeLists.txt  myapp.cpp  net.cpp  net.h  util.cpp  util.h
check_language/: CMakeLists.txt
check_language/source/: Base.cpp  Base.h  CMakeLists.txt  Info.cpp
check_libcomb/: CMakeLists.txt  log  releaseBuild.sh
check_libcomb/source/: CMakeLists.txt  master.cpp  myShared.cpp  myShared.h  myStatic.cpp  myStatic.h  other.cpp  other.h
check_library/: CMakeLists.txt
check_library/source/: CMakeLists.txt  component.cpp  component.h  master.cpp  message.cpp  message.h
check_platalone/: CMakeLists.txt
check_platalone/source/: CMakeLists.txt  hasher.cpp  hasher.h  master.cpp
check_property/: CMakeLists.txt
check_property/src/: CMakeLists.txt  lib.cpp  lib.h  main.cpp
check_simpleproject/: CMakeLists.txt  apple.cpp  apple.h  hello  main.cpp  orange.cpp  orange.h  printinfo.cpp  printinfo.h
check_subdir/: CMakeLists.txt
check_subdir/src/: CMakeLists.txt
check_targettype/: CMakeLists.txt
check_targettype/source/: CMakeLists.txt  tar.cpp  tar.h  test.cpp
check_toolchain/: CMakeLists.txt  log
check_toolchain/source/: CMakeLists.txt  foo.cpp  foo.h  master.cpp
check_variant/: CMakeCache.txt  CMakeLists.txt  Makefile  cleaner.sh  cmake_install.cmake  log
check_version/: CMakeLists.txt
check_version/source/: CMakeLists.txt  app.cpp  app.h  foobar_version.h.in  master.cpp
check_version_ctrl/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  app.cpp  build.ninja  cmake_install.cmake  foobar_version.h  foobar_version.h.in  projectVersionDetails.cmake  rules.ninja
cmake/: UseDoxygenDoc.cmake
cmake_build_tools/: CTestConfig.cmake  debugBuild.sh  howto-usage-gitpush.md  sup-build-cleaner.sh
docs/: Doxyfile.in  front_page.md
function_google_test/: CMakeLists.txt  debugBuild.sh  log
function_google_test/source/: main.cpp  test.cpp  username.cpp  username.h
function_test_example/: CMakeLists.txt  debugBuild.sh  log
function_test_simple/: CMakeLists.txt  log
function_test_simple/source/: CMakeLists.txt  barTest.cpp  fooTest.cpp  main.cpp  msg.cpp  msg.h
src/: CMakeLists.txt  Message.cpp  Message.h  hello-world.cpp  main.cpp  sum_integers.cpp  sum_integers.h
super_build_mode/: CMakeLists.txt  log
super_build_mode/src/: CMakeLists.txt
super_install_build/: CMakeCPack.cmake  CMakeLists.txt  buildCleaner.sh  debugBuild.sh  log  sup-build.sh
super_install_build/cmake/: messageConfig.cmake.in
super_install_build/src/: CMakeLists.txt  Message.cpp  Message.h
super_install_build/tests/: CMakeLists.txt
super_install_build/tests/use_target/: CMakeLists.txt
tests/: CMakeLists.txt  test_long.cpp  test_short.cpp
tests/use_target/: use_message.cpp
