cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(FooBar VERSION 1.0.1 LANGUAGES CXX)

# set(FooBar_VERSION 1.0.1)
# set(FooBar_VERSION_MAJOR 1)
# set(FooBar_VERSION_MINOR 0)
# set(FooBar_VERSION_PATCH 1)
# set(FooBar_VERSION
#         ${FooBar_VERSION_MAJOR}.${FooBar_VERSION_MINOR}.${FooBar_VERSION_PATCH})

# add_definitions(-DFOOBAR_VERSION=\"${FooBar_VERSION}\")

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(source)

# message(STATUS "AT ROOT DIR: PROJECT_BINARY_DIR = ${PROJECT_BINARY_DIR}")
# message(STATUS "AT ROOT DIR: PROJECT_SOURCE_DIR = ${PROJECT_SOURCE_DIR}")
# message(STATUS "AT ROOT DIR: CMAKE_CURRENT_BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}")
# message(STATUS "AT ROOT DIR: CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
