add_library(networking net.cpp)
set_target_properties(networking PROPERTIES
	# COMPATIBLE_INTERFACE_BOOL SSL_SUPPORT
	# INTERFACE_SSL_SUPPORT YES
	# COMPATIBLE_INTERFACE_STRING SSL_IMPL
	# INTERFACE_SSL_IMPL OpenSSL
	# COMPATIBLE_INTERFACE_NUMBER_MIN PROTOCOL_VER
	# COMPATIBLE_INTERFACE_NUMBER_MAX TMP_BUFFERS
	# INTERFACE_PROTOCOL_VER 3
	# INTERFACE_TMP_BUFFERS 200
	COMPATIBLE_INTERFACE_NUMBER_MIN PROTOCOL_VER_MIN
	COMPATIBLE_INTERFACE_NUMBER_MAX PROTOCOL_VER_MAX
	INTERFACE_PROTOCOL_VER_MIN 3
	INTERFACE_PROTOCOL_VER_MAX 3
	)

add_library(util util.cpp)
set_target_properties(util PROPERTIES
	# COMPATIBLE_INTERFACE_BOOL SSL_SUPPORT
	# INTERFACE_SSL_SUPPORT YES
	# COMPATIBLE_INTERFACE_STRING SSL_IMPL
	# INTERFACE_SSL_IMPL OpenSSL
	# COMPATIBLE_INTERFACE_NUMBER_MIN PROTOCOL_VER
	# COMPATIBLE_INTERFACE_NUMBER_MAX TMP_BUFFERS
	# INTERFACE_PROTOCOL_VER 2
	# INTERFACE_TMP_BUFFERS 15
	COMPATIBLE_INTERFACE_NUMBER_MIN PROTOCOL_VER_MIN
	COMPATIBLE_INTERFACE_NUMBER_MAX PROTOCOL_VER_MAX
	INTERFACE_PROTOCOL_VER_MIN 2
	INTERFACE_PROTOCOL_VER_MAX 2
	)

add_executable(myApp myapp.cpp)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

target_link_libraries(myApp PRIVATE networking util)
target_compile_definitions(myApp PRIVATE
	# $<$<BOOL:$<TARGET_PROPERTY:SSL_SUPPORT>>:HAVE_SSL>
	# SSL_IMPL=$<TARGET_PROPERTY:SSL_IMPL>
	# MIN_API=$<TARGET_PROPERTY:PROTOCOL_VER>
	# TMP_BUFFERS=$<TARGET_PROPERTY:TMP_BUFFERS>
	PROTOCOL_VER_MIN=$<TARGET_PROPERTY:PROTOCOL_VER_MIN>
	PROTOCOL_VER_MAX=$<TARGET_PROPERTY:PROTOCOL_VER_MAX>
	)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
